--- a/index.html
+++ b/index.html
@@ -48,12 +48,7 @@
 
     <section class="aboutZS">
         <div class="info">
-            <div class="info2 infbox">
-                <p>Quality conversations are what we strive for in every interaction and we've built solutions for this in
-                    our infrastructure. Zoomships bridges the gap between randomized chat roulettes and Zoom's video web-hosting
-                    client. Friendships start here. Create fun and meaningful connections through Zoomships soon!
-                </p>
-            </div>
+            <i class="fas fa-users"></i>
             <div class="info1 infbox">
                 <p>
                     Make sporadic connections by meeting up with strangers from all over the globe. Socializing with strangers that
@@ -61,6 +56,13 @@
                     chat. A countdown timer will begin when launch day becomes near. Keep an eye out.
                 </p>
             </div>
+            <div class="info2 infbox">
+                <p>Quality conversations are what we strive for in every interaction and we've built solutions for this in
+                    our infrastructure. Zoomships bridges the gap between randomized chat roulettes and Zoom's video web-hosting
+                    client. Friendships start here. Create fun and meaningful connections through Zoomships soon!
+                </p>
+            </div>
+            <img src="./images/zoomlogo.png" alt="">
         </div>
     </section>
 
