--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <section class="aboutZS">
         <div class="info">
-            <i class="fas fa-users"></i>
+            <i class="fas fa-users fa-5x"></i>
             <div class="info1 infbox">
                 <p>
                     Make sporadic connections by meeting up with strangers from all over the globe. Socializing with strangers that
