--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <br> <br>
                 <p class="whatis">what is zoomships?</p>
                 <br>
-                <div id="moreArrow">
+                <a href="#aboutZS"><div id="moreArrow">
                     <i id="arIcon" class="fas fa-angle-down fa-2x"></i>
-                </div>
+                </div></a>
         </div>
     </section>
 
@@ -46,9 +46,9 @@
 
     </div>
 
-    <section class="aboutZS">
+    <section id="aboutZS" class="aboutZS">
         <div class="info">
-            <i class="fas fa-users fa-5x"></i>
+            <i class="fas fa-users fa-10x peopleIcon"></i>
             <div class="info1 infbox">
                 <p>
                     Make sporadic connections by meeting up with strangers from all over the globe. Socializing with strangers that
@@ -62,7 +62,7 @@
                     client. Friendships start here. Create fun and meaningful connections through Zoomships soon!
                 </p>
             </div>
-            <img src="./images/zoomlogo.png" alt="">
+            <img class="zoomlogo" src="./images/zoomlogo.png" alt="">
         </div>
     </section>
 
