--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     client. Friendships start here. Create fun and meaningful connections through Zoomships soon!
                 </p>
             </div>
-            <img class="zoomlogo" src="./images/zoomlogo.png" alt="">
+            <i class="fas fa-random fa-10x zoomlogo"></i>
         </div>
     </section>
 
