--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./images/slogo.png" type="image/png">
-    <title>zoomships</title>
+    <title>Zoomships</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
 
     <section class="statusSec">
         <div class="status">
-            <p>zoomships is currently under development. We're working hard integrating the Zoom client with our services to
+            <p>Zoomships is currently under development. We're working hard integrating the Zoom client with our services to
                 host exciting webcam-based (and text-based) chat meet-ups! Hold tight and keep up-to-date on our socials.</p>
                 <br> <br>
                 <p class="whatis">what is zoomships?</p>
