--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
     <header>
         <img class="zslogo" src="./images/logo.png" alt="zoomships logo">
+        <div class="socialIcons">
+            <a href="https://www.facebook.com/"><i class="fab fa-facebook-f fa-1x"></i></a>
+            <a href="https://www.instagram.com/"><i style="color: #2D8CFF;" class="fab fa-instagram fa-1x"></i></a>
+            <a href="https://www.youtube.com/"><i class="fab fa-youtube fa-1x"></i></a>
+        </div>
     </header>
 
     <section class="countSec">
