--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <body>
 
     <header>
-        <img class="zslogo" src="./images/logo.png" alt="zoomships logo">
+        <div>
+            <img class="zslogo" src="./images/logo.png" alt="zoomships logo">
+        </div>
         <div class="socialIcons">
             <a href="https://www.facebook.com/"><i class="fab fa-facebook-f fa-1x"></i></a>
             <a href="https://www.instagram.com/"><i style="color: #2D8CFF;" class="fab fa-instagram fa-1x"></i></a>
