--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <img class="zslogo" src="./images/logo.png" alt="zoomships logo">
         </div>
         <div class="socialIcons">
-            <a href="https://www.facebook.com/"><i class="fab fa-facebook-f fa-1x"></i></a>
-            <a href="https://www.instagram.com/"><i style="color: #2D8CFF;" class="fab fa-instagram fa-1x"></i></a>
-            <a href="https://www.youtube.com/"><i class="fab fa-youtube fa-1x"></i></a>
+            <a target="_blank" href="https://www.facebook.com/Zoomships"><i class="fab fa-facebook-f fa-1x"></i></a>
+            <a target="_blank" href="https://www.instagram.com/"><i style="color: #2D8CFF;" class="fab fa-instagram fa-1x"></i></a>
+            <a target="_blank" href="https://www.youtube.com/"><i class="fab fa-youtube fa-1x"></i></a>
         </div>
     </header>
 
